# utf8-tokenizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  test.yaml
experiments/: benchmark.py
experiments/language-modelling/: .gitignore  README.md  analyze.py  clm-bpe-gpt2.sh  clm-byte-bit.sh  clm-byte-t5.sh  clm-byte.sh  run_clm.py
experiments/language-modelling/models/: run_inference.py  utf16-lm-tiny.sh  utf32-lm-tiny.sh  utf8-groups-lm-tiny.sh  utf8-lm-tiny.sh
tests/: test_byte_embeddings.py  test_causal_lm.py  test_char_causal_lm.py  test_char_embeddings.py  test_chat_template.py  test_control.py  test_embeddings.py  test_logits_processor.py  test_tokenizer.py  test_utf8_grouping.py  test_utils.py
utf8_tokenizer/: __init__.py  byt5_comparison.py  byte_embeddings.py  char_causal_lm.py  char_embeddings.py  chat_template.jinja  control.py  embeddings.py  logits_processor.py  tokenizer.py  utils.py
utf8_tokenizer/groups/: README.md  __init__.py  causal_lm.py  embedding.py  group_utf8_bytes.py  kernel_global.cu  kernel_shared.cu  performance.md
